--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #d0e4fe;
+    background-color: cadetblue;
 }
 
 h1 {
@@ -11,3 +11,4 @@ p {
     font-family: "Times New Roman";
     font-size: 20px;
 }
+
